# CppConcepts

./: .gitignore  README.md
ClientServerMessageQueue/src/: client.cpp  server.cpp
ClientServerSocket/: CMakeLists.txt
ClientServerSocket/src/: client.cpp  server.cpp
Listner/: CMakeLists.txt
Listner/include/: ConcreteListener.h  Listener.h  Publisher.h
Listner/src/: main.cpp
WatchDog/: CMakeLists.txt
WatchDog/include/: callbacks.hpp
WatchDog/src/: callbacks.cpp  main.cpp
ipcPipe/: CMakeLists.txt
ipcPipe/src/: pipe.cpp
test/: test  test.cpp
